--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -194,7 +194,7 @@
        </a>
 
 
-        <a href="../htmls/brawn.html">
+        <a href="../htmls/brown.html">
           <img src="../photos/br/11.jpeg" 　alt=""   class="photo"/> 
           <p>12→</p>
           <img src="../photos/br/10.jpeg" 　alt=""   class="photo0"/> 
@@ -274,7 +274,7 @@
           <img src="../photos/b/50.jpeg" 　alt=""   class="photo0"/> 
         
         </a>  
-        <a href="../htmls/brawn2.html">
+        <a href="../htmls/brown2.html">
           <img src="../photos/br/21.jpeg" 　alt=""   class="photo"/>   
           <p>24→</p>
           <img src="../photos/br/20.jpeg" 　alt=""   class="photo0"/> 
