--- a/htmls/blue5.html
+++ b/htmls/blue5.html
@@ -48,7 +48,7 @@
         <div class="rane1">
           <img src="../photos/b/50.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/51.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/b/52.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/b/52.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/b/53.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/54.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/55.jpeg" 　alt=""   class="photo"/> 
