--- a/htmls/brown.html
+++ b/htmls/brown.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>brawn2</title>
+    <title>brown1</title>
   
 
     <meta name="X-UA-Compatible" content="IE=Edge">
@@ -46,27 +46,23 @@
 
     <div id="all">    
         <div class="rane1">
-          <img src="../photos/br/20.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/21.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/22.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/23.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/24.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/25.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/26.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/27.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/28.jpg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/29.jpg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/10.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/11.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/12.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/13.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/14.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/15.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/16.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/17.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/18.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/br/19.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Duffle coat → Patterned open coat<br>
-            pleated skirt → Two-tiered pleated skirt<br>
-            Long sleeve knit → knit vest / glove<br>
-            Vest & Other scraps → Shoulder bag<br>
+            Thick knit×3、Blouse ×2 → One Knit<br>
+            Lightweight knit×4 → Snood / Pochette<br>
           </p>
           <p>
-            リメイクのポイントは、ベストで作ったショルダーバッグと、ボトムスです。
-            ボトムスはリメイク元のレディースのスカートをメンズでも履けるように2段にし、サイドは2本のベルトで調整できるようにしています。
-            アイシャドウやリップなどはブラウンでまとめ、頬にポイントとなるラインを描くことで、長髪の知的なメンズスタイルを演出しました。
+            7つのニットを分解し、ワンピース、つけ襟、スヌード、ポシェットという4つのアイテムにギュッと詰め込みました。様々なレースを使ったスヌードは巻き方によって見える顔が違うこともポイント。冬の寒さを楽しんでいる女の子です
           </p>
         </div>  
         
