--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -130,14 +130,14 @@
 
      
     </div>
-    <div class="text1">
+    <div class="text４">
       <h4>  Re-make !した我々が、今ここにあるのです。</h4>
     </div>
  
     <!-- <hr> -->
     <!-- 直線 -->
     <!-- <hr class="dot" noshade> -->
-    <hr width="80%" noshade>
+    <!-- <hr width="80%" noshade> -->
 
     
   <img src="../photos/11.png" 　alt=""   class="photolast"/> 
