--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -132,6 +132,7 @@
          
     <div class="text2">
       <h2>Meaning</h2>
+      <hr width="90%" noshade>
       <a>
         Cap⁵の意味<br>
         ・Cap「頂点...最高のファッションショーにしたい」<br>
@@ -142,7 +143,7 @@
       </a>
       <br>
    </div>
-   <hr width="70%" >
+   <!-- <hr width="70%" > -->
 
 
 
