--- a/htmls/blue3.html
+++ b/htmls/blue3.html
@@ -53,7 +53,7 @@
           <img src="../photos/b/34.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/b/35.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/b/36.JPG" 　alt=""   class="photo"/> 
-          <img src="../photos/b/37.JPG" 　alt=""   class="photo"/> 
+          <img src="../photos/b/37.jpg" 　alt=""   class="photo"/> 
           <img src="../photos/b/38.JPG" 　alt=""   class="photo"/> 
           <img src="../photos/b/39.JPG" 　alt=""   class="photo"/> 
 
