--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <body oncontextmenu="return false;">
   <div class="bb">
-    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
+    <video playsinline autoplay muted onended="location.href='htmls/1class.html'; " class="main">
         <source src="op3.mp4">
     </video>
    
