--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
 <body oncontextmenu="return false;">
   <div class="bb">
-    <video playsinline autoplay muted onended="location.href='htmls/1class.html'; " class="main">
-        <source src="op3.mp4">
+    <video src="op3.mp4" playsinline autoplay muted onended="location.href='htmls/1class.html'; " class="main" type="video/mp4" >
     </video>
    
     <!-- <video playsinline autoplay muted loop class="main">
