--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 </header>
 
-<body oncontextmenu="return false;">
+<body >
   <div class="bb">
     <video src="op3.mp4" playsinline autoplay muted onended="location.href='htmls/1class.html'; " class="main" type="video/mp4" >
     </video>
@@ -75,6 +75,7 @@
     <!-- <video playsinline autoplay muted loop class="main">
       <source src="op.mp4">
     </video> -->
+  </div>
 </body>
 <!--
 <footer>
@@ -90,7 +91,6 @@
       </ul>
     </nav>
   -->
-</div>
 </html>
 
 
