--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 
 <body >
   <div class="bb">
-    <video src="op3.mp4" playsinline autoplay muted onended="location.href='htmls/1class.html'; " class="main" type="video/mp4" >
+    <video src="op3.mp4" playsinline autoplay muted class="main" type="video/mp4" >
     </video>
    
-    <!-- <video playsinline autoplay muted loop class="main">
+    <!-- <video playsinline autoplay muted loop class="main"> onended="location.href='htmls/1class.html'; " 
       <source src="op.mp4">
     </video> -->
   </div>
