--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 
 <body >
   <div class="bb">
-    <video src="op3.mp4" playsinline autoplay muted class="main" type="video/mp4" >
+    <video src="op.mp4" playsinline autoplay muted class="main" type="video/mp4" >
     </video>
-   
     <!-- <video playsinline autoplay muted loop class="main"> onended="location.href='htmls/1class.html'; " 
       <source src="op.mp4">
     </video> -->
@@ -92,14 +91,3 @@
     </nav>
   -->
 </html>
-
-
-
-
-
-
-
-
-<!-- <video playsinline autoplay muted loop class="main">
-  <source src="op.mp4">
-</video> -->
