--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
     </div>
 </header>
 
-<body >
+<body oncontextmenu="return false;">
   <div class="bb">
-    <video src="op.mp4" playsinline autoplay muted class="main" type="video/mp4" >
+    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
+        <source src="op3.mp4">
     </video>
-    <!-- <video playsinline autoplay muted loop class="main"> onended="location.href='htmls/1class.html'; " 
+   
+    <!-- <video playsinline autoplay muted loop class="main">
       <source src="op.mp4">
     </video> -->
-  </div>
 </body>
 <!--
 <footer>
@@ -90,4 +91,16 @@
       </ul>
     </nav>
   -->
+</div>
 </html>
+
+
+
+
+
+
+
+
+<!-- <video playsinline autoplay muted loop class="main">
+  <source src="op.mp4">
+</video> -->
