これでいってほしい

--- a/index.html
+++ b/index.html
@@ -67,11 +67,17 @@
     </div>
 </header>
 
-<body oncontextmenu="return false;">
+<body>
   <div class="bb">
     <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op3.mp4">
     </video>
+  </div>
+
+  <div class="long d-md-none">
+    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
+        <source src="op_low.mp4">
+  </div>
    
     <!-- <video playsinline autoplay muted loop class="main">
       <source src="op.mp4">
@@ -91,7 +97,6 @@
       </ul>
     </nav>
   -->
-</div>
 </html>
 
 
