最後のロゴ消したよ

--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -161,7 +161,7 @@
 
   
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
-    <img src="../photos/14.png" 　alt=""   class="photolast2"/> 
+    <!-- <img src="../photos/14.png" 　alt=""   class="photolast2"/>  -->
 
   
 
