--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -249,6 +249,6 @@
 
     <!-- <img src="../photos/blur/11.png" 　alt=""   class="photolast3"/>  -->
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
-    <img src="../photos/12.jpeg" 　alt=""   class="photolast2"/> 
+    <!-- <img src="../photos/12.jpeg" 　alt=""   class="photolast2"/>  -->
 </body>
 </html>
