--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -300,7 +300,7 @@
 
 
     <img src="../photos/11.png" 　alt=""   class="photolast"/> 
-    <img src="../photos/12.jpeg" 　alt=""   class="photolast"/> 
+    <!-- <img src="../photos/12.jpeg" 　alt=""   class="photolast"/>  -->
 
 
   </body>
