--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -141,7 +141,7 @@
 
     
   <img src="../photos/11.png" 　alt=""   class="photolast"/> 
-  <img src="../photos/14.png" 　alt=""   class="photolast2"/> 
+  <!-- <img src="../photos/14.png" 　alt=""   class="photolast2"/>  -->
 </body>
 
  
