--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 <body>
   <div class="bb">
     <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
-        <source src="op3.mp4">
+        <source src="op.mp4">
     </video>
   </div>
 
-  <div class="long d-md-none">
-    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
-        <source src="op_low.mp4">
+  <div class="d-md-none">
+    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main" height="100%" width="100%">
+        <source src="op_f2.mp4">
   </div>
    
     <!-- <video playsinline autoplay muted loop class="main">
