--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 <body>
   <div class="bb">
     <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
-        <source src="op.mp4">
+        <source src="op3.mp4">
     </video>
   </div>
 
   <div class="d-md-none">
-    <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main" height="100%" width="100%">
+    <video playsinline loop autoplay muted>
         <source src="op_f2.mp4">
   </div>
    
