--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 </header>
 
-<body>
+<body oncontextmenu="return false;">
   <div class="bb">
     <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op3.mp4">
@@ -75,8 +75,8 @@
   </div>
 
   <div class="d-md-none">
-    <video playsinline loop autoplay muted>
-        <source src="op_f2.mp4">
+    <video class="main" playsinline loop autoplay muted>
+        <source src="op.mp4">
   </div>
    
     <!-- <video playsinline autoplay muted loop class="main">
