--- a/htmls/black3.html
+++ b/htmls/black3.html
@@ -58,7 +58,7 @@
           <img src="../photos/bl/39.JPG" 　alt=""   class="photo"/> 
 
           <p>
-            hooded sweatshirt & Solid color sweatshirt & Knit → Tops <br>
+            Hooded sweatshirt & Solid color sweatshirt & Knit → Tops <br>
             Jeans → Damaged jeans <br>
             Necktie → Jeans pattern<br>
           </p>
