--- a/htmls/blue2.html
+++ b/htmls/blue2.html
@@ -56,9 +56,9 @@
           <img src="../photos/b/27.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/28.jpeg" 　alt=""   class="photo"/>
           <p>
-            Denim pants & chino pants & →Various types of pants → Fluttering skirt<br>
-            judo clothes → Jacket <br>
-            fleece → Vest<br>
+            Denim pants & Chino pants & → Various types of pants → Fluttering skirt<br>
+            Judo clothes → Jacket <br>
+            Fleece → Vest<br>
           </p>
           <p>
             スカートパンツは1番のポイントで、何枚ものボトムスから切り出した素材を集めてひらひらとし、いろんな青色を集めてみました。
