--- a/htmls/blue3.html
+++ b/htmls/blue3.html
@@ -58,8 +58,8 @@
           <img src="../photos/b/39.JPG" 　alt=""   class="photo"/> 
 
           <p>
-            Denim one piece & Light blue polyester dress → tunic<br>
-            Light blue dress → blouse<br>
+            Denim one piece & Light blue polyester dress → Tunic<br>
+            Light blue dress → Blouse<br>
             White Wide Pants → Sahuel pants<br>
           </p>
           <p>
