--- a/htmls/blue5.html
+++ b/htmls/blue5.html
@@ -58,8 +58,8 @@
           <img src="../photos/b/59.JPG" 　alt=""   class="photo"/> 
 
           <p>
-            velours skirt → Tops <br>
-            quilted down coat → Skirt <br>
+            Velours skirt → Tops <br>
+            Quilted down coat → Skirt <br>
             Hood of a hoodie → Skirt<br>
           </p>
           <p>
