--- a/htmls/brown2.html
+++ b/htmls/brown2.html
@@ -59,8 +59,8 @@
 
           <p>
             Duffle coat → Patterned open coat<br>
-            pleated skirt → Two-tiered pleated skirt<br>
-            Long sleeve knit → knit vest / glove<br>
+            Pleated skirt → Two-tiered pleated skirt<br>
+            Long sleeve knit → Knit vest & Glove<br>
             Vest & Other scraps → Shoulder bag<br>
           </p>
           <p>
