--- a/htmls/purple.html
+++ b/htmls/purple.html
@@ -58,9 +58,9 @@
           <img src="../photos/p/19.jpeg" 　alt=""   class="photo"/> 
 
           <p>
-            shirt×3, denim×2, jacket → shirt dress<br>
-            jacket → vest<br>
-            denim → damaged denim<br>
+            Shirt×3 & Denim×2 & Jacket → Shirt dress<br>
+            Jacket → Vest<br>
+            Denim → Damaged denim<br>
           </p>
           <p>
             イメージは「ワイルドでセクシーな貴族」です。ファーと金のリップでゴージャスさを演出しました。
