--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -59,9 +59,9 @@
           <img src="../photos/p/29.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Sweetheart & Tulle pannier → neckwear<br>
+            Sweetheart & Tulle pannier → Neckwear<br>
             Skinny pants → Ruffle short pants <br>
-            White cloth → tube top<br>
+            White cloth → Tube top<br>
             Skirt ×3 & Tulle pannier → Ruffled skirt<br>
           </p>
           <p>
