--- a/htmls/purple3.html
+++ b/htmls/purple3.html
@@ -59,7 +59,7 @@
           <img src="../photos/p/39.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Jacket ×2 & Camisole & clothes made from jersey cloth & Hooded sweatshirt → Jacket <br>
+            Jacket ×2 & Camisole & Clothes made from jersey cloth & Hooded sweatshirt → Jacket <br>
             Plain Pants → Patterned Pants<br>
           </p>
           <p>
