--- a/htmls/white.html
+++ b/htmls/white.html
@@ -59,7 +59,7 @@
           <!-- <img src="../photos/w/110.jpeg" 　alt=""   class="photo"/> -->
 
           <p>
-            vintage long wedding dress → draped short dress
+            Vintage long wedding dress → Draped short dress
           </p>
           <p>
             ヴィンテージのウェディングドレス２着をリメイク。ドレープの効いたショートドレスに。
