--- a/htmls/white2.html
+++ b/htmls/white2.html
@@ -60,7 +60,7 @@
           <p>
             T-shirt → Poncho <br>
             Pants → Pants <br>
-            windbreaker → Outer<br>
+            Windbreaker → Outer<br>
           </p>
           <p>
             70年代イギリスのパンクロックをテーマに制作しました。なので、中のTシャツにガーゼを縫い合わせてモスリンシャツを表現したり、上着にベルトをつけて拘束服をイメージしたような服にアレンジしました。
