--- a/htmls/white3.html
+++ b/htmls/white3.html
@@ -58,10 +58,10 @@
           <p>
             cardigan → Top Knit<br>
             Lace Knitting Tops → Top Decorations<br>
-            Sheer knitwear → skirt part<br>
+            Sheer knitwear → Skirt part<br>
             Long skirt → Skirt part of the one piece <br>
             Waffle fabric sweatshirt×2 → Upper part and skirt part of the one piece <br>
-            Previous Costume → high-necked<br>
+            Previous Costume → High-necked<br>
           </p>
           <p>
             ふわふわ雲の上にいる女の子のイメージです。
