--- a/htmls/white5.html
+++ b/htmls/white5.html
@@ -58,7 +58,7 @@
           <img src="../photos/w/59.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Blouse×2 & Lace & Ribbon → blouse<br>
+            Blouse×2 & Lace & Ribbon → Blouse<br>
             Skirt & Ribbon → Skirt<br>
           </p>
           <p>
