--- a/htmls/red.html
+++ b/htmls/red.html
@@ -58,12 +58,12 @@
 
           <p>
             Hooded sweatshirt → Poncho<br>
-            Skirt → Part of the poncho/Hem of pants<br>
-            Ribbed Knit → Part of the poncho / Bare muscle pants such as pants<br>
-            Fur vest → Food /Fur on sleeves,etc.<br>
+            Skirt → Part of the poncho & Hem of pants<br>
+            Ribbed Knit → Part of the poncho & Bare muscle pants such as pants<br>
+            Fur vest → Food & Fur on sleeves & etc.<br>
             Turtleneck → Inner <br>
             Pants → Pants <br>
-            Skirt → Poncho/ Part of the pants<br>
+            Skirt → Poncho & Part of the pants<br>
           </p>
           <p>
             テーマは狼の腹を裂いて生還した赤ずきんちゃんです。
