--- a/htmls/white4.html
+++ b/htmls/white4.html
@@ -58,7 +58,7 @@
           <img src="../photos/w/49.jpg" 　alt=""   class="photo"/> 
 
           <p>
-            Long denim → Short denim / Bustier <br>
+            Long denim → Short denim & Bustier <br>
             Hooded sweatshirt → Short Length hoodie<br>
           </p>
           <p>
