--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="d-md-none">
-    <video class="main" playsinline loop autoplay muted>
+    <video class="main" playsinline autoplay muted onended="location.href='htmls/1class.html'; ">
         <source src="op.mp4">
   </div>
    
