--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -38,7 +38,15 @@
   </script>
 
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GZ9FQW18K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-3GZ9FQW18K');
+</script>
 
 
 </head>
