--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -38,6 +38,16 @@
   </script>
 
   <!-- 上記でフォント追加 -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GZ9FQW18K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3GZ9FQW18K');
+</script>
 </head>
 
 <header oncontextmenu="return false;">
