--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -34,6 +34,16 @@
       })(document);
     </script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3GZ9FQW18K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3GZ9FQW18K');
+</script>
+
   </head>
 
   <header oncontextmenu="return false;">
