Revert "どうが直したtate"
This reverts commit a3d15ec800117e7d4691fea69a754f4f769dcede.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </header>
 
 <body oncontextmenu="return false;">
-  <div class="bb  d-md-block">
+  <div class="bb">
     <video playsinline muted autoplay onended="location.href='htmls/1class.html'; " class="main">
         <source src="op3.mp4">
     </video>
@@ -84,7 +84,7 @@
 
   <div class="d-md-none">
     <video class="main" playsinline autoplay muted onended="location.href='htmls/1class.html'; ">
-        <source src="optate.mp4">
+        <source src="op.mp4">
   </div>
    
     <!-- <video playsinline autoplay muted loop class="main">
